// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`console > function printHexadecimal(): FLOAT_BE 9 bytes > ansi 1`] = `
"00000000      42     F6     E9     79     79     E9     F6     42     00                                                  BöéyyéöB.
                     123.456001281738      1.5184998373247989e+35
"
`;

exports[`console > function printHexadecimal(): FLOAT_BE 9 bytes > colors 1`] = `
"[90m00000000 [39m     42     F6     E9     79     79     E9     F6     42     00                                                  [97mBöéyyéöB[38;5;240m.[39m[97m[39m
[90m                     123.456001281738      1.5184998373247989e+35[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): FLOAT_LE 9 bytes > ansi 1`] = `
"00000000      42     F6     E9     79     79     E9     F6     42     00                                                  BöéyyéöB.
               1.5184998373247989e+35            123.456001281738
"
`;

exports[`console > function printHexadecimal(): FLOAT_LE 9 bytes > colors 1`] = `
"[90m00000000 [39m     42     F6     E9     79     79     E9     F6     42     00                                                  [97mBöéyyéöB[38;5;240m.[39m[97m[39m
[90m               1.5184998373247989e+35            123.456001281738[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT8 1 byte > ansi 1`] = `
"00000000    00                                                                            .
             0
"
`;

exports[`console > function printHexadecimal(): INT8 1 byte > colors 1`] = `
"[90m00000000 [39m   00                                                                            [97m[38;5;240m.[39m[97m[39m
[90m             0[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT8 5 bytes > ansi 1`] = `
"00000000    0A   14   1E   28   FA                                                        ...(ú
            10   20   30   40   -6
"
`;

exports[`console > function printHexadecimal(): INT8 5 bytes > colors 1`] = `
"[90m00000000 [39m   0A   14   1E   28   FA                                                        [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m(ú[39m
[90m            10   20   30   40   -6[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT8 26 bytes > ansi 1`] = `
"00000000    00   0A   14   1E   28   32   3C   46   50   5A   64   6E   78   82   8C   96 ....(2<FPZdnx...
             0   10   20   30   40   50   60   70   80   90  100  110  120 -126 -116 -106
00000010    A0   AA   B4   BE   C8   D2   DC   E6   F0   FA                                ª´¾ÈÒÜæðú
           -96  -86  -76  -66  -56  -46  -36  -26  -16   -6
"
`;

exports[`console > function printHexadecimal(): INT8 26 bytes > colors 1`] = `
"[90m00000000 [39m   00   0A   14   1E   28   32   3C   46   50   5A   64   6E   78   82   8C   96 [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m(2<FPZdnx[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[39m
[90m             0   10   20   30   40   50   60   70   80   90  100  110  120 -126 -116 -106[39m
[90m[39m[90m00000010 [39m   A0   AA   B4   BE   C8   D2   DC   E6   F0   FA                               [97m ª´¾ÈÒÜæðú[39m
[90m           -96  -86  -76  -66  -56  -46  -36  -26  -16   -6[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT16_BE 5 bytes > ansi 1`] = `
"00000000   0A  14  1E  FA  FA                                             ...úú
             2580    7930
"
`;

exports[`console > function printHexadecimal(): INT16_BE 5 bytes > colors 1`] = `
"[90m00000000 [39m  0A  14  1E  FA  FA                                             [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m             2580    7930[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT16_LE 5 bytes > ansi 1`] = `
"00000000   0A  14  1E  FA  FA                                             ...úú
             5130   -1506
"
`;

exports[`console > function printHexadecimal(): INT16_LE 5 bytes > colors 1`] = `
"[90m00000000 [39m  0A  14  1E  FA  FA                                             [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m             5130   -1506[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT32_BE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
            169090810
"
`;

exports[`console > function printHexadecimal(): INT32_BE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m            169090810[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): INT32_LE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
            -98692086
"
`;

exports[`console > function printHexadecimal(): INT32_LE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m            -98692086[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT8 1 byte > ansi 1`] = `
"00000000   00                                                             .
            0
"
`;

exports[`console > function printHexadecimal(): UINT8 1 byte > colors 1`] = `
"[90m00000000 [39m  00                                                             [97m[38;5;240m.[39m[97m[39m
[90m            0[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT8 5 bytes > ansi 1`] = `
"00000000   0A  14  1E  28  FA                                             ...(ú
           10  20  30  40 250
"
`;

exports[`console > function printHexadecimal(): UINT8 5 bytes > colors 1`] = `
"[90m00000000 [39m  0A  14  1E  28  FA                                             [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m(ú[39m
[90m           10  20  30  40 250[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT16_BE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
           2580  7930
"
`;

exports[`console > function printHexadecimal(): UINT16_BE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m           2580  7930[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT16_LE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
           5130 64030
"
`;

exports[`console > function printHexadecimal(): UINT16_LE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m           5130 64030[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT32_BE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
            169090810
"
`;

exports[`console > function printHexadecimal(): UINT32_BE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m            169090810[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): UINT32_LE 5 bytes > ansi 1`] = `
"00000000  0A 14 1E FA FA                                  ...úú
           4196275210
"
`;

exports[`console > function printHexadecimal(): UINT32_LE 5 bytes > colors 1`] = `
"[90m00000000 [39m 0A 14 1E FA FA                                  [97m[38;5;240m.[39m[97m[38;5;240m.[39m[97m[38;5;240m.[39m[97múú[39m
[90m           4196275210[39m
[90m[39m"
`;

exports[`console > function printHexadecimal(): simplified 1 byte > ansi 1`] = `
"00000000 00                               .
"
`;

exports[`console > function printHexadecimal(): simplified 1 byte > colors 1`] = `
"[90m00000000 [39m00                               [97m[38;5;240m.[39m[97m[39m
"
`;

exports[`console > function printHexadecimal(): simplified 40 bytes > ansi 1`] = `
"00000000 68656C6C6F68656C6C6F68656C6C6F68 hellohellohelloh
00000010 656C6C6F68656C6C6F68656C6C6F6865 ellohellohellohe
00000020 6C6C6F68656C6C6F                 llohello
"
`;

exports[`console > function printHexadecimal(): simplified 40 bytes > colors 1`] = `
"[90m00000000 [39m68656C6C6F68656C6C6F68656C6C6F68 [97mhellohellohelloh[39m
[90m00000010 [39m656C6C6F68656C6C6F68656C6C6F6865 [97mellohellohellohe[39m
[90m00000020 [39m6C6C6F68656C6C6F                 [97mllohello[39m
"
`;

exports[`console > function printHexadecimal(): simplified empty > ansi 1`] = `""`;

exports[`console > function printHexadecimal(): simplified empty > colors 1`] = `""`;
